Fix the close button not showing up in Safari (#111)
* Fix the close button not showing up in Safari, due to the close button being rendered outside of the elements padding box.

* Simplify the selector

* Use an even more specific CSS style, out of caution.

--- a/mu-plugins/blocks/global-header-footer/postcss/header/menu.pcss
+++ b/mu-plugins/blocks/global-header-footer/postcss/header/menu.pcss
@@ -162,3 +162,12 @@
 		}
 	}
 }
+
+/* Gutenberg bug: Close button is not visible in Safari; override it locally */
+.global-header__navigation .is-menu-open {
+	overflow: visible;
+
+	& > div {
+		overflow: scroll;
+	}
+}
